@@ -70,6 +70,8 @@ class Snippet
     /** @var SecurityProfileStore */
     #public $WildfireProfileStore = null;
 
+    /** @var SecurityProfileStore */
+    public $DataFilteringProfileStore = null;
 
     /** @var SecurityProfileGroupStore */
     public $securityProfileGroupStore = null;
@@ -218,6 +220,9 @@ class Snippet
 
         $this->FileBlockingProfileStore = new SecurityProfileStore($this, "FileBlockingProfile");
         $this->FileBlockingProfileStore->name = 'FileBlocking';
+
+        $this->DataFilteringProfileStore = new SecurityProfileStore($this, "DataFilteringProfile");
+        $this->DataFilteringProfileStore->name = 'DataFiltering';
 
         #$this->WildfireProfileStore = new SecurityProfileStore($this, "SecurityProfileWildFire");
         #$this->WildfireProfileStore->name = 'WildFire';
@@ -500,6 +505,13 @@ class Snippet
                 {
                     $this->FileBlockingProfileStore->load_from_domxml($tmproot);
                 }
+
+                //
+                // DataFiltering Profile extraction
+                //
+                $tmproot = DH::findFirstElement('data-filtering', $this->securityProfilebaseroot);
+                if( $tmproot !== FALSE )
+                    $this->DataFilteringProfileStore->load_from_domxml($tmproot);
 
                 //
                 // vulnerability Profile extraction
@@ -870,6 +882,8 @@ class Snippet
         $stdoutarray['custom URL objects']['total'] = $this->customURLProfileStore->count();
         $stdoutarray['File-Blocking objects'] = array();
         $stdoutarray['File-Blocking objects']['total'] = $this->FileBlockingProfileStore->count();
+        $stdoutarray['Data-Filtering objects'] = array();
+        $stdoutarray['Data-Filtering objects']['total'] = $this->DataFilteringProfileStore->count();
         $stdoutarray['Decryption objects'] = array();
         $stdoutarray['Decryption objects']['total'] = $this->DecryptionProfileStore->count();
 
